feat(file) allow condition to only check for file existence
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updatecli.generic/file.yaml
+++ b/examples/updatecli.generic/file.yaml
@@ -35,6 +35,16 @@ conditions:
     sourceID: ContentFromLocalFile
     spec:
       file: LICENSE
+  LocalFileExists:
+    kind: file
+    disablesourceinput: true
+    spec:
+      file: LICENSE
+  RemoteFileExists:
+    kind: file
+    disablesourceinput: true
+    spec:
+      file: https://get.helm.sh/helm-v3.5.0-darwin-amd64.tar.gz.sha256sum
   URLFileMatchesSpecifiedContent:
     kind: file
     disablesourceinput: true
