--- a/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
+++ b/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
@@ -1,73 +1,13 @@
 version: '3'
 services:
-  # Agent-2 should be ignored as digest is not supported at the moment
-  agent-2:
-    image: ghcr.io/updatecli/updatemonitor@sha256:2b3436753ba2c671c382777d8980ed6ea7350851e71bff0326dc776c0c9e2334
-    command: agent start
-    volumes:
-      - "./config.yaml:/home/updatemonitor/.updatemonitor/config.yaml"
-    environment:
-      - UPDATECLI_GITHUB_TOKEN=${UPDATECLI_GITHUB_TOKEN}
-      - UPDATECLI_GITHUB_ACTOR=${UPDATECLI_GITHUB_ACTOR}
-
-  mongodb:
-    image: mongo:6.0.2
-    platform: linux/amd64
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password
+  # The jenkinsci/jenkins is deprecated and so won't be updated
+  # So the test shouldn't fail in the future
+  jenkins-lts:
+    image: jenkinsci/jenkins:2.150.1-alpine
     ports:
-      - 27017
-
-
-  ## export UPDATECLI_GITHUB_TOKEN=<your Github PAT>
-  ## export UPDATECLI_GITHUB_ACTOR=<your user name>
-  agent:
-    image: ghcr.io/updatecli/updatemonitor:v0.1.0
-    command: agent start
-    volumes:
-      - "./config.yaml:/home/updatemonitor/.updatemonitor/config.yaml"
-    environment:
-      - UPDATECLI_GITHUB_TOKEN=${UPDATECLI_GITHUB_TOKEN}
-      - UPDATECLI_GITHUB_ACTOR=${UPDATECLI_GITHUB_ACTOR}
-
-  server:
-    image: ghcr.io/updatecli/updatemonitor:v0.1.0
-    command: server start
-    volumes:
-      - "./config.yaml:/home/updatemonitor/.updatemonitor/config.yaml"
-    expose:
-      - 8080
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik-server.rule=PathPrefix(`/api/`)"
-      - "traefik.http.routers.traefik-server.middlewares=removeapi@docker"
-      # - "traefik.http.routers.traefik-server.service=server"
-      - "traefik.http.middlewares.removeapi.stripprefix.prefixes=/api"
-      - "traefik.http.middlewares.removeapi.stripprefix.forceSlash=false"
-      # If only one port exposed by the container then traefik can detect it
-      # - "traefik.http.services.server.loadbalancer.server.port=8080"
-
-  front:
-    image: ghcr.io/updatecli/updatemonitor-ui:v0.1.1
-    expose:
-      - 80
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.front.rule=PathPrefix(`/`)"
-      - "traefik.http.routers.front.service=front"
-      - "traefik.http.services.front.loadbalancer.server.port=80"
-
-  traefik:
-    image: "traefik:v2.9"
-    container_name: "traefik"
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    ports:
-      - "80:80"
       - "8080:8080"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+  jenkins-weekly:
+    image: jenkinsci/jenkins:2.254-alpine
+    platform: linux/amd64
+    ports:
+      - "8080:8080"
